[gd_scene load_steps=5 format=2]

[ext_resource path="res://Exit.gd" type="Script" id=1]
[ext_resource path="res://ASSETS/OtherTiles/platformPack_tile048.png" type="Texture" id=2]
[ext_resource path="res://Sounds/Menu Select.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27.9128, 40.9876 )

[node name="Exit" type="Area2D" groups=["goals"]]
position = Vector2( 0, -48 )
collision_layer = 128
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1, 1.5 )
texture = ExtResource( 2 )

[node name="Particles" type="CPUParticles2D" parent="."]
emitting = false
amount = 50
emission_shape = 1
emission_sphere_radius = 25.0
gravity = Vector2( 0, 0 )
radial_accel_random = 0.1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6.99335 )
shape = SubResource( 1 )

[node name="FinishAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Exit_body_entered"]
[connection signal="finished" from="FinishAudio" to="." method="finish_level"]
